test: clothes 캐시 적용하면서 깨진 테스트 수정